--- a/src/gallery/sass/section.sass
+++ b/src/gallery/sass/section.sass
@@ -32,462 +32,36 @@
 		display: flex
 		flex-wrap: wrap
 		justify-content: center
-		.item
+		img
 			margin: 5px
 			width: 200px
 			height: 200px
-		button
-			background:
-				size: 100% 100%
-			border: none
-			&:focus
-				outline: none
-			&:hover
-				cursor: pointer
-		button[data-id="etnomodeli1"]
-			background-image: url(../images/etno/1.jpg)
-		button[data-id="etnomodeli2"]
-			background-image: url(../images/etno/2.jpg)
-		button[data-id="etnomodeli3"]
-			background-image: url(../images/etno/3.jpg)
-		button[data-id="etnomodeli4"]
-			background-image: url(../images/etno/4.jpg)
-		button[data-id="etnomodeli5"]
-			background-image: url(../images/etno/5.jpg)
-		button[data-id="etnomodeli6"]
-			background-image: url(../images/etno/6.jpg)
-		button[data-id="etnomodeli7"]
-			background-image: url(../images/etno/7.jpg)
-		button[data-id="etnomodeli8"]
-			background-image: url(../images/etno/8.jpg)
-		button[data-id="etnomodeli9"]
-			background-image: url(../images/etno/9.jpg)
-		button[data-id="etnomodeli10"]
-			background-image: url(../images/etno/10.jpg)
-		button[data-id="etnomodeli11"]
-			background-image: url(../images/etno/11.jpg)
-		button[data-id="etnomodeli12"]
-			background-image: url(../images/etno/12.jpg)
-		button[data-id="etnomodeli13"]
-			background-image: url(../images/etno/13.jpg)
-		button[data-id="etnomodeli14"]
-			background-image: url(../images/etno/14.jpg)
-		button[data-id="etnomodeli15"]
-			background-image: url(../images/etno/15.jpg)
-		button[data-id="etnomodeli16"]
-			background-image: url(../images/etno/16.jpg)
-		button[data-id="etnomodeli17"]
-			background-image: url(../images/etno/17.jpg)
-		button[data-id="etnomodeli18"]
-			background-image: url(../images/etno/18.jpg)
-		button[data-id="etnomodeli19"]
-			background-image: url(../images/etno/19.jpg)
-		button[data-id="etnomodeli20"]
-			background-image: url(../images/etno/20.jpg)
-		button[data-id="etnomodeli21"]
-			background-image: url(../images/etno/21.jpg)
-		button[data-id="etnomodeli22"]
-			background-image: url(../images/etno/22.jpg)
-		button[data-id="etnomodeli23"]
-			background-image: url(../images/etno/23.jpg)
-		button[data-id="etnomodeli24"]
-			background-image: url(../images/etno/24.jpg)
-		button[data-id="etnomodeli25"]
-			background-image: url(../images/etno/25.jpg)
-		button[data-id="etnomodeli26"]
-			background-image: url(../images/etno/26.jpg)
-		button[data-id="etnomodeli27"]
-			background-image: url(../images/etno/27.jpg)
-		button[data-id="etnomodeli28"]
-			background-image: url(../images/etno/28.jpg)
-		button[data-id="etnomodeli29"]
-			background-image: url(../images/etno/29.jpg)
-		button[data-id="etnomodeli30"]
-			background-image: url(../images/etno/30.jpg)
-		button[data-id="etnomodeli31"]
-			background-image: url(../images/etno/31.jpg)
-		button[data-id="etnomodeli32"]
-			background-image: url(../images/etno/32.jpg)
-		button[data-id="etnomodeli33"]
-			background-image: url(../images/etno/33.jpg)
-		button[data-id="etnomodeli34"]
-			background-image: url(../images/etno/34.jpg)
-		button[data-id="etnomodeli35"]
-			background-image: url(../images/etno/35.jpg)
-		button[data-id="etnomodeli36"]
-			background-image: url(../images/etno/36.jpg)
-		button[data-id="etnomodeli37"]
-			background-image: url(../images/planine/37.jpg)
-		button[data-id="planine1"]
-			background-image: url(../images/planine/1.jpg)
-		button[data-id="planine2"]
-			background-image: url(../images/planine/2.jpg)
-		button[data-id="planine3"]
-			background-image: url(../images/planine/3.jpg)
-		button[data-id="planine4"]
-			background-image: url(../images/planine/4.jpg)
-		button[data-id="planine5"]
-			background-image: url(../images/planine/5.jpg)
-		button[data-id="planine6"]
-			background-image: url(../images/planine/6.jpg)
-		button[data-id="planine7"]
-			background-image: url(../images/planine/7.jpg)
-		button[data-id="planine8"]
-			background-image: url(../images/planine/8.jpg)
-		button[data-id="planine9"]
-			background-image: url(../images/planine/9.jpg)
-		button[data-id="planine10"]
-			background-image: url(../images/planine/10.jpg)
-		button[data-id="planine11"]
-			background-image: url(../images/planine/11.jpg)
-		button[data-id="planine12"]
-			background-image: url(../images/planine/12.jpg)
-		button[data-id="planine13"]
-			background-image: url(../images/planine/13.jpg)
-		button[data-id="planine14"]
-			background-image: url(../images/planine/14.jpg)
-		button[data-id="planine15"]
-			background-image: url(../images/planine/15.jpg)
-		button[data-id="planine16"]
-			background-image: url(../images/planine/16.jpg)
-		button[data-id="planine17"]
-			background-image: url(../images/planine/17.jpg)
-		button[data-id="planine18"]
-			background-image: url(../images/planine/18.jpg)
-		button[data-id="planine19"]
-			background-image: url(../images/planine/19.jpg)
-		button[data-id="planine20"]
-			background-image: url(../images/planine/20.jpg)
-		button[data-id="planine21"]
-			background-image: url(../images/planine/21.jpg)
-		button[data-id="planine22"]
-			background-image: url(../images/planine/22.jpg)
-		button[data-id="planine23"]
-			background-image: url(../images/planine/23.jpg)
-		button[data-id="planine24"]
-			background-image: url(../images/planine/24.jpg)
-		button[data-id="planine25"]
-			background-image: url(../images/planine/25.jpg)
-		button[data-id="planine26"]
-			background-image: url(../images/planine/26.jpg)
-		button[data-id="planine27"]
-			background-image: url(../images/planine/27.jpg)
-		button[data-id="planine28"]
-			background-image: url(../images/planine/28.jpg)
-		button[data-id="planine29"]
-			background-image: url(../images/planine/29.jpg)
-		button[data-id="planine30"]
-			background-image: url(../images/planine/30.jpg)
-		button[data-id="planine31"]
-			background-image: url(../images/planine/31.jpg)
-		button[data-id="planine32"]
-			background-image: url(../images/planine/32.jpg)
-		button[data-id="planine33"]
-			background-image: url(../images/planine/33.jpg)
-		button[data-id="planine34"]
-			background-image: url(../images/planine/34.jpg)
-		button[data-id="planine35"]
-			background-image: url(../images/planine/35.jpg)
-		button[data-id="planine36"]
-			background-image: url(../images/planine/36.jpg)
-		button[data-id="planine37"]
-			background-image: url(../images/planine/37.jpg)
-		button[data-id="planine38"]
-			background-image: url(../images/planine/38.jpg)
-		button[data-id="planine39"]
-			background-image: url(../images/planine/39.jpg)
-		button[data-id="planine40"]
-			background-image: url(../images/planine/40.jpg)
-		button[data-id="planine41"]
-			background-image: url(../images/planine/41.jpg)
-		button[data-id="planine42"]
-			background-image: url(../images/planine/42.jpg)
-		button[data-id="planine43"]
-			background-image: url(../images/planine/43.jpg)
-		button[data-id="planine44"]
-			background-image: url(../images/planine/44.jpg)
-		button[data-id="planine45"]
-			background-image: url(../images/planine/45.jpg)
-		button[data-id="planine46"]
-			background-image: url(../images/planine/46.jpg)
-		button[data-id="planine47"]
-			background-image: url(../images/planine/47.jpg)
-		button[data-id="planine48"]
-			background-image: url(../images/planine/48.jpg)
-		button[data-id="planine49"]
-			background-image: url(../images/planine/49.jpg)
-		button[data-id="planine50"]
-			background-image: url(../images/planine/50.jpg)
-		button[data-id="planine51"]
-			background-image: url(../images/planine/51.jpg)
-		button[data-id="planine52"]
-			background-image: url(../images/planine/52.jpg)
-		button[data-id="planine53"]
-			background-image: url(../images/planine/53.jpg)
-		button[data-id="planine54"]
-			background-image: url(../images/planine/54.jpg)
-		button[data-id="planine55"]
-			background-image: url(../images/planine/55.jpg)
-		button[data-id="planine56"]
-			background-image: url(../images/planine/56.jpg)
-		button[data-id="planine57"]
-			background-image: url(../images/planine/57.jpg)
-		button[data-id="planine58"]
-			background-image: url(../images/planine/58.jpg)
-		button[data-id="planine59"]
-			background-image: url(../images/planine/59.jpg)
-		button[data-id="planine60"]
-			background-image: url(../images/planine/60.jpg)
-		button[data-id="planine61"]
-			background-image: url(../images/planine/61.jpg)
-		button[data-id="planine62"]
-			background-image: url(../images/planine/62.jpg)
-		button[data-id="planine63"]
-			background-image: url(../images/planine/63.jpg)
-		button[data-id="morski1"]
-			background-image: url(../images/morski/1.jpg)
-		button[data-id="morski2"]
-			background-image: url(../images/morski/2.jpg)
-		button[data-id="morski3"]
-			background-image: url(../images/morski/3.jpg)
-		button[data-id="morski4"]
-			background-image: url(../images/morski/4.jpg)
-		button[data-id="morski5"]
-			background-image: url(../images/morski/5.jpg)
-		button[data-id="morski6"]
-			background-image: url(../images/morski/6.jpg)
-		button[data-id="morski7"]
-			background-image: url(../images/morski/7.jpg)
-		button[data-id="morski8"]
-			background-image: url(../images/morski/8.jpg)
-		button[data-id="morski9"]
-			background-image: url(../images/morski/9.jpg)
-		button[data-id="morski10"]
-			background-image: url(../images/morski/10.jpg)
-		button[data-id="morski11"]
-			background-image: url(../images/morski/11.jpg)
-		button[data-id="morski12"]
-			background-image: url(../images/morski/12.jpg)
-		button[data-id="morski13"]
-			background-image: url(../images/morski/13.jpg)
-		button[data-id="morski14"]
-			background-image: url(../images/morski/14.jpg)
-		button[data-id="morski15"]
-			background-image: url(../images/morski/15.jpg)
-		button[data-id="morski16"]
-			background-image: url(../images/morski/16.jpg)
-		button[data-id="morski17"]
-			background-image: url(../images/morski/17.jpg)
-		button[data-id="morski18"]
-			background-image: url(../images/morski/18.jpg)
-		button[data-id="morski19"]
-			background-image: url(../images/morski/19.jpg)
-		button[data-id="morski20"]
-			background-image: url(../images/morski/20.jpg)
-		button[data-id="morski21"]
-			background-image: url(../images/morski/21.jpg)
-		button[data-id="morski22"]
-			background-image: url(../images/morski/22.jpg)
-		button[data-id="morski23"]
-			background-image: url(../images/morski/23.jpg)
-		button[data-id="morski24"]
-			background-image: url(../images/morski/24.jpg)
-		button[data-id="morski25"]
-			background-image: url(../images/morski/25.jpg)
-		button[data-id="morski26"]
-			background-image: url(../images/morski/26.jpg)
-		button[data-id="morski27"]
-			background-image: url(../images/morski/27.jpg)
-		button[data-id="morski28"]
-			background-image: url(../images/morski/28.jpg)
-		button[data-id="morski29"]
-			background-image: url(../images/morski/29.jpg)
-		button[data-id="morski30"]
-			background-image: url(../images/morski/30.jpg)
-		button[data-id="morski31"]
-			background-image: url(../images/morski/31.jpg)
-		button[data-id="morski32"]
-			background-image: url(../images/morski/32.jpg)
-		button[data-id="morski33"]
-			background-image: url(../images/morski/33.jpg)
-		button[data-id="morski34"]
-			background-image: url(../images/morski/34.jpg)
-		button[data-id="morski35"]
-			background-image: url(../images/morski/35.jpg)
-		button[data-id="morski36"]
-			background-image: url(../images/morski/36.jpg)
-		button[data-id="morski37"]
-			background-image: url(../images/morski/37.jpg)
-		button[data-id="morski38"]
-			background-image: url(../images/morski/38.jpg)
-		button[data-id="morski39"]
-			background-image: url(../images/morski/39.jpg)
-		button[data-id="morski40"]
-			background-image: url(../images/morski/40.jpg)
-		button[data-id="morski41"]
-			background-image: url(../images/morski/41.jpg)
-		button[data-id="piksle1"]
-			background-image: url(../images/piksle/1.jpg)
-		button[data-id="piksle2"]
-			background-image: url(../images/piksle/2.jpg)
-		button[data-id="piksle3"]
-			background-image: url(../images/piksle/3.jpg)
-		button[data-id="piksle4"]
-			background-image: url(../images/piksle/4.jpg)
-		button[data-id="piksle5"]
-			background-image: url(../images/piksle/5.jpg)
-		button[data-id="piksle6"]
-			background-image: url(../images/piksle/6.jpg)
-		button[data-id="piksle7"]
-			background-image: url(../images/piksle/7.jpg)
-		button[data-id="piksle8"]
-			background-image: url(../images/piksle/8.jpg)
-		button[data-id="piksle9"]
-			background-image: url(../images/piksle/9.jpg)
-		button[data-id="piksle10"]
-			background-image: url(../images/piksle/10.jpg)
-		button[data-id="piksle11"]
-			background-image: url(../images/piksle/11.jpg)
-		button[data-id="piksle12"]
-			background-image: url(../images/piksle/12.jpg)
-		button[data-id="piksle13"]
-			background-image: url(../images/piksle/13.jpg)
-		button[data-id="piksle14"]
-			background-image: url(../images/piksle/14.jpg)
-		button[data-id="piksle15"]
-			background-image: url(../images/piksle/15.jpg)
-		button[data-id="piksle16"]
-			background-image: url(../images/piksle/16.jpg)
-		button[data-id="piksle17"]
-			background-image: url(../images/piksle/17.jpg)
-		button[data-id="piksle18"]
-			background-image: url(../images/piksle/18.jpg)
-		button[data-id="piksle19"]
-			background-image: url(../images/piksle/19.jpg)
-		button[data-id="piksle20"]
-			background-image: url(../images/piksle/20.jpg)
-		button[data-id="piksle21"]
-			background-image: url(../images/piksle/21.jpg)
-		button[data-id="piksle22"]
-			background-image: url(../images/piksle/22.jpg)
-		button[data-id="piksle23"]
-			background-image: url(../images/piksle/23.jpg)
-		button[data-id="piksle24"]
-			background-image: url(../images/piksle/24.jpg)
-		button[data-id="piksle25"]
-			background-image: url(../images/piksle/25.jpg)
-		button[data-id="piksle26"]
-<<<<<<< HEAD
-			background-image: url(../images/piksle/26.jpg)
 #etno
-=======
-			background-image: url(../imagesmini/piksle/26.jpg)
-		button[data-id="crkve1"]
-			background-image: url(../imagesmini/crkve/1.jpg)
-		button[data-id="crkve2"]
-			background-image: url(../imagesmini/crkve/2.jpg)
-		button[data-id="crkve3"]
-			background-image: url(../imagesmini/crkve/3.jpg)
-		button[data-id="crkve4"]
-			background-image: url(../imagesmini/crkve/4.jpg)
-		button[data-id="crkve5"]
-			background-image: url(../imagesmini/crkve/5.jpg)
-		button[data-id="crkve6"]
-			background-image: url(../imagesmini/crkve/6.jpg)
-		button[data-id="crkve7"]
-			background-image: url(../imagesmini/crkve/7.jpg)
-		button[data-id="magneti1"]
-			background-image: url(../imagesmini/magneti/1.jpg)
-		button[data-id="magneti2"]
-			background-image: url(../imagesmini/magneti/2.jpg)
-		button[data-id="magneti3"]
-			background-image: url(../imagesmini/magneti/3.jpg)
-		button[data-id="magneti4"]
-			background-image: url(../imagesmini/magneti/4.jpg)
-		button[data-id="magneti5"]
-			background-image: url(../imagesmini/magneti/5.jpg)
-		button[data-id="magneti6"]
-			background-image: url(../imagesmini/magneti/6.jpg)
-		button[data-id="magneti7"]
-			background-image: url(../imagesmini/magneti/7.jpg)
-		button[data-id="magneti8"]
-			background-image: url(../imagesmini/magneti/8.jpg)
-		button[data-id="magneti9"]
-			background-image: url(../imagesmini/magneti/9.jpg)
-		button[data-id="magneti10"]
-			background-image: url(../imagesmini/magneti/10.jpg)
-		button[data-id="magneti11"]
-			background-image: url(../imagesmini/magneti/11.jpg)
-		button[data-id="magneti12"]
-			background-image: url(../imagesmini/magneti/12.jpg)
-		button[data-id="magneti13"]
-			background-image: url(../imagesmini/magneti/13.jpg)
-		button[data-id="magneti14"]
-			background-image: url(../imagesmini/magneti/14.jpg)
-		button[data-id="izrada1"]
-			background-image: url(../imagesmini/izrada/1.jpg)
-		button[data-id="izrada2"]
-			background-image: url(../imagesmini/izrada/2.jpg)
-		button[data-id="izrada3"]
-			background-image: url(../imagesmini/izrada/3.jpg)
-		button[data-id="izrada4"]
-			background-image: url(../imagesmini/izrada/4.jpg)
-		button[data-id="izrada5"]
-			background-image: url(../imagesmini/izrada/5.jpg)
-		button[data-id="izrada6"]
-			background-image: url(../imagesmini/izrada/6.jpg)
-		button[data-id="izrada7"]
-			background-image: url(../imagesmini/izrada/7.jpg)
-		button[data-id="izrada8"]
-			background-image: url(../imagesmini/izrada/8.jpg)
-		button[data-id="izrada9"]
-			background-image: url(../imagesmini/izrada/9.jpg)
-		button[data-id="izrada10"]
-			background-image: url(../imagesmini/izrada/10.jpg)
-		button[data-id="izrada11"]
-			background-image: url(../imagesmini/izrada/11.jpg)
-		button[data-id="izrada12"]
-			background-image: url(../imagesmini/izrada/12.jpg)
-		button[data-id="izrada13"]
-			background-image: url(../imagesmini/izrada/13.jpg)
-		button[data-id="izrada14"]
-			background-image: url(../imagesmini/izrada/14.jpg)
-		button[data-id="izrada15"]
-			background-image: url(../imagesmini/izrada/15.jpg)
-		button[data-id="izrada16"]
-			background-image: url(../imagesmini/izrada/16.jpg)
-		button[data-id="izrada17"]
-			background-image: url(../imagesmini/izrada/17.jpg)
-		button[data-id="izrada18"]
-			background-image: url(../imagesmini/izrada/18.jpg)
-		button[data-id="izrada19"]
-			background-image: url(../imagesmini/izrada/19.jpg)
-#etnomodeli
->>>>>>> a611760f81665103d28cb3e2484f8b4c354ccc33
 	.cover
+		background-attachment:
 		background:
-			image: url(../images/etno/cover.jpg)
+			image: url(../images/etno/suveniri-etno-cover.jpg)
 #planine
 	.cover
 		background:
-			image: url(../images/planine/cover.jpg)
+			image: url(../images/planine/suveniri-banje-cover.jpg)
 #morski
 	.cover
 		background: 
-			image: url(../images/morski/cover.jpg)
+			image: url(../images/morski/suveniri-more-cover.jpg)
 #piksle
 	.cover
 		background: 
-			image: url(../images/piksle/cover.jpg)
+			image: url(../images/piksle/suveniri-piksle-cover.jpg)
 #crkve
 	.cover
 		background:
-			image: url(../images/crkve/cover.jpg)
+			image: url(../images/crkve/suveniri-crkve-cover.jpg)
 #magneti
 	.cover
 		background:
-			image: url(../images/magneti/cover.jpg)
+			image: url(../images/magneti/suveniri-magneti-cover.jpg)
 #izrada
 	.cover
 		background:
-			image: url(../images/izrada/cover.jpg)
+			image: url(../images/izrada/suveniri-izrada-cover.jpg)
