--- a/src/index/sass/slider.sass
+++ b/src/index/sass/slider.sass
@@ -32,34 +32,35 @@ body,html
                 width: 100%
                 display: inline-block
                 &:nth-of-type(1)
-                    background: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0,0.3)), url(../images/slider/1.jpg)
+                    background: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0,0.3)), url(../images/slider/suveniri-gocko-1.jpg)
                     background-size: 100% 100%
                 &:nth-of-type(2)
-                    background: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0,0.3)), url(../images/slider/2.jpg)
+                    background: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0,0.3)), url(../images/slider/suveniri-opanci-2.jpg)
                     background-size: 100% 100%
                 &:nth-of-type(3)
-                    background: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0,0.3)), url(../images/slider/3.jpg)
+                    background: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0,0.3)), url(../images/slider/suveniri-etno-3.jpg)
                     background-size: 100% 100%
                 &:nth-of-type(4)
-                    background: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0,0.3)), url(../images/slider/4.jpg)
+                    background: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0,0.3)), url(../images/slider/suveniri-izrada-4.jpg)
                     background-size: 100% 100%
                 &:nth-of-type(5)
-                    background: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0,0.3)), url(../images/slider/5.jpg)
+                    background: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0,0.3)), url(../images/slider/suveniri-opanak-5.jpg)
                     background-size: 100% 100%
                 &:nth-of-type(6)
-                    background: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0,0.3)), url(../images/slider/6.jpg)
+                    background: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0,0.3)), url(../images/slider/suveniri-etno-6.jpg)
                     background-size: 100% 100%
                 &:nth-of-type(7)
-                    background: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0,0.3)), url(../images/slider/7.jpg)
+                    background: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0,0.3)), url(../images/slider/suveniri-izrada-7.jpg)
                     background-size: 100% 100%
                 &:nth-of-type(8)
-                    background: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0,0.3)), url(../images/slider/8.jpg)
+                    background: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0,0.3)), url(../images/slider/suveniri-piksle-8.jpg)
                     background-size: 100% 100%
     button
         animation:
             name: bounce
             duration: 3.5s
-            iteration-count: infinite 
+            iteration-count: infinite
+        margin-bottom: 30px
         width: 32px
         height: 32px
         background-color: black
