--- a/src/gallery/sass/modal.sass
+++ b/src/gallery/sass/modal.sass
@@ -1,36 +1,70 @@
-.modalbox
-	top: 0
-	left: 0
-	position: fixed
-	width: 100vw
-	height: 100vh
-	display: none
-	vertical-align: middle
-	align-text: center
-	background:
-		color: rgba(0,0,0,0.7)
-	img
-		top: 50%
-		left: 50%
-		transform: translate(-50%,-50%)
-		position: absolute
-		display: none
-		margin: auto auto
-		height: 70%
-		max-width: 1200px
-	button
-		border: none
-		position: absolute
-		top: 20px
-		right: 30px
-		background:
-			color: Transparent
-			image: url(../images/delete.png)
-			size: 100% 100%
-			repeat: no-repeat
-		height: 80px
-		width: 80px
-		&:focus
-			outline: none
-		&:hover
-			cursor: pointer
+@keyframes show
+    from
+        opacity: 0
+    to
+        opacity: 1
+.show
+    display: none
+    position: absolute
+    top: 50%
+    left: 50%
+    width: 32px
+    height: 32px
+    z-index: 1
+    transform: translate(-16px,-16px)
+    background-image: url(../images/expand.png)
+    background-color: transparent
+    background-size: 100%
+    border: none
+    &:focus
+        outline: none
+.imgbox
+    position: relative
+    &:hover > .hover
+.hover
+    .show
+        transition: 0.5s all
+        display: block
+    img
+        transition: 0.5s all
+        filter: brightness(30%)
+.imgshow
+    transition: 0.5s all
+    height: 70vh
+    width: auto
+    position: fixed
+    top: 50%
+    left: 50%
+    transform: translate(-50%,-50%)
+    z-index: 3
+.modal
+    opacity: 0
+    background : rgba(0,0,0,0.7)
+    z-index: 2
+    top: 0
+    left: 0
+    display: none
+    height: 100vh
+    width: 100vw
+    position: fixed
+    transition: 0.5s all
+.classic-show
+    animation-name: show
+    animation-duration: 0.5s
+    animation-iteration-count: 1
+.animation-show
+    animation-name: show
+    animation-duration: 0.5s
+    animation-iteration-count: 1
+    animation-timing-function: ease-in-out
+    animation-direction: normal
+    animation-fill-mode: forwards
+.animation-hide
+    animation-name: show
+    animation-duration: 0.5s
+    animation-iteration-count: 1
+    animation-timing-function: ease-in-out
+    animation-direction: reverse
+    animation-fill-mode: forwards
+body.noscroll
+    overflow: hidden
