--- a/src/index/index.pug
+++ b/src/index/index.pug
@@ -10,11 +10,13 @@ html
         meta(property="og:url", content="http://www.suveniri.ga")
         meta(property="og:title", content="DnD Suveniri")
         meta(property="og:description", content="Ručno rađeni, unikatni suveniri svih vrsta")
+        meta(name="viewport", content="width=device-width, initial-scale=1.0")
         link(href="https://fonts.googleapis.com/css?family=Work+Sans" rel="stylesheet")
         link(href="https://fonts.googleapis.com/css?family=Merriweather" rel="stylesheet")
     body
         .nav
             img(src="images/logo.png")
+            button.dropdown
             .links
                 a(href="#" disabled="disabled") Home
                 a(href="/gallery", target="_blank") galerija
