--- a/src/index/sass/mobile.sass
+++ b/src/index/sass/mobile.sass
@@ -1,4 +1,4 @@
-@media(max-width: 540px)
+@media(max-width: 600px)
 	.nav
 		height: 80px
 		img
@@ -8,14 +8,17 @@
 			visibility: hidden
 			opacity: 0
 			position: absolute
-			right: 52px
-			margin: 0 5px
-			font-size: 18px
+			right: 42px
+			margin: 0
+			font-size: 22px
+			width: calc(100vw - 42px)
+			text-align: center
 			button
-				font-size: 18px
-				margin: 0
+				margin-left: 5px
+				font-size: 1em
+				margin-left: 10px
 			a
-				margin: 0
+				margin-left: 10px
 		.dropdown
 			position: absolute
 			display: initial
@@ -29,7 +32,24 @@
 				box-shadow: none
 		.contact
 			position: absolute
-			left: 45vw
-			width: 90vw
+			left: 55%
+			transform: translateX(-50%)
+			width: 90%
 		.test
 			background-image: url(../images/close.png)
+	.imgshow
+	    transition: 0.5s all
+	    height: auto
+	    width: 90vw
+	    position: fixed
+	    top: 50%
+	    left: 50%
+	    transform: translate(-50%,-50%)
+	    z-index: 3
+@media(max-width: 380px)
+	.links
+		font-size: 18px !important
+		a
+			margin-left: 5px !important
+		button
+			margin-left: 5px !important
