Finished mobile site for landing page

--- a/src/index/index.pug
+++ b/src/index/index.pug
@@ -2,9 +2,9 @@ doctype
 html
     head
         meta(charset="utf-8")
-        meta(name="Descritpion",content="Ručno rađeni, unikatni suveniri svih vrsta")
+        meta(name="description",content="Veleprodaja i maloprodaja rucno radjenih suvenira svih vrsta, od morskih do etno suvenira za sve prilike.Izrada modela suvenira na najfiniji nacin")
         meta(name="author", content="Jovan Petković")
-        title DnD Suveniri
+        title DnD Suveniri - Ručno Rađeni Suvenri Svih Vrsta
         meta(property="og:image", content="./images/suveniri-facebook.jpg")
         meta(property="og:type", content="website")
         meta(property="og:url", content="http://www.suveniri.ga")
